--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@wdio/devtools-service": "^7.16.10",
         "@wdio/local-runner": "^7.16.10",
         "@wdio/mocha-framework": "^7.16.6",
-        "@wdio/spec-reporter": "^7.16.9"
+        "@wdio/spec-reporter": "^7.16.9",
+        "dotenv": "^10.0.0"
     }
 }
