--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@wdio/local-runner": "^7.16.10",
         "@wdio/mocha-framework": "^7.16.6",
         "@wdio/spec-reporter": "^7.16.9",
-        "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "faker": "^5.5.3"
     }
 }
