refactor install dependencies step in ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
       - image: circleci/node:latest-browsers
     steps:
       - checkout
-      - node/install-packages
+      - run:
+          name: Install deoendencies
+          command: |
+            npm i
       - run:
           name: Run tests
           command: |
