--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install deoendencies
+          name: Install dependencies
           command: |
             npm i
       - run:
