--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
     "version": "1.0.0",
     "description": "Kompot UI tests with WebdriverIO",
     "scripts": {
-        "test": "npx wdio run wdio.conf.js"
+        "test:chrome": "npx wdio run ./config/chrome.conf.js",
+        "test:chrome:headless": "npx wdio run ./config/chrome.headless.conf.js",
+        "test:firefox": "npx wdio run ./config/firefox.conf.js",
+        "test:firefox:headless": "npx wdio run ./config/firefox.headless.conf.js",
+        "report:serve": "npx allure serve allure-results",
+        "report:generate": "npx allure generate allure-results -o allure-report --clean",
+        "report:open": "npx allure open allure-report"
     },
-    "author": "Tatiana Simonova",
+    "author": "Dmitrii Bormotov",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.16.0",
-        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-env": "^7.16.0",
         "@babel/register": "^7.16.0",
-        "@wdio/cli": "^7.16.10",
-        "@wdio/devtools-service": "^7.16.10",
-        "@wdio/local-runner": "^7.16.10",
-        "@wdio/mocha-framework": "^7.16.6",
-        "@wdio/spec-reporter": "^7.16.9",
+        "@wdio/allure-reporter": "^7.16.10",
+        "@wdio/cli": "^7.16.4",
+        "@wdio/devtools-service": "^7.16.4",
+        "@wdio/local-runner": "^7.16.4",
+        "@wdio/mocha-framework": "^7.16.4",
+        "@wdio/spec-reporter": "^7.16.4",
+        "allure-commandline": "^2.13.8",
+        "deepmerge": "^4.2.2",
         "dotenv": "^10.0.0",
-        "faker": "^5.5.3"
+        "geckodriver": "^2.0.4",
+        "wdio-geckodriver-service": "^2.0.3"
     }
 }
