--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/register": "^7.16.0",
-        "@wdio/allure-reporter": "^7.16.10",
+        "@wdio/allure-reporter": "^7.16.11",
         "@wdio/cli": "^7.16.4",
         "@wdio/devtools-service": "^7.16.4",
         "@wdio/local-runner": "^7.16.4",
@@ -26,6 +26,7 @@
         "allure-commandline": "^2.13.8",
         "deepmerge": "^4.2.2",
         "dotenv": "^10.0.0",
+        "faker": "^5.5.3",
         "geckodriver": "^2.0.4",
         "wdio-geckodriver-service": "^2.0.3"
     }
