--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
         "report:generate": "npx allure generate allure-results -o allure-report --clean",
         "report:open": "npx allure open allure-report"
     },
-    "author": "Dmitrii Bormotov",
+    "author": "Tatiana Simonova",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/register": "^7.16.0",
-        "@wdio/allure-reporter": "^7.16.10",
+        "@wdio/allure-reporter": "^7.16.11",
         "@wdio/cli": "^7.16.4",
         "@wdio/devtools-service": "^7.16.4",
         "@wdio/local-runner": "^7.16.4",
         "@wdio/mocha-framework": "^7.16.4",
         "@wdio/spec-reporter": "^7.16.4",
-        "allure-commandline": "^2.13.8",
+        "allure-commandline": "^2.17.2",
         "deepmerge": "^4.2.2",
         "dotenv": "^10.0.0",
+        "faker": "^5.5.3",
         "geckodriver": "^2.0.4",
         "wdio-geckodriver-service": "^2.0.3"
     }
