--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "report:generate": "npx allure generate allure-results -o allure-report --clean",
         "report:open": "npx allure open allure-report"
     },
-    "author": "Dmitrii Bormotov",
+    "author": "Tatiana Simonova",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -23,7 +23,7 @@
         "@wdio/local-runner": "^7.16.4",
         "@wdio/mocha-framework": "^7.16.4",
         "@wdio/spec-reporter": "^7.16.4",
-        "allure-commandline": "^2.13.8",
+        "allure-commandline": "^2.17.2",
         "deepmerge": "^4.2.2",
         "dotenv": "^10.0.0",
         "faker": "^5.5.3",
