--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
         "@babel/register": "^7.16.0",
         "@wdio/allure-reporter": "^7.16.11",
         "@wdio/cli": "^7.16.4",
-        "@wdio/devtools-service": "^7.16.4",
-        "@wdio/local-runner": "^7.16.4",
+        "@wdio/cucumber-framework": "^7.16.12",
+        "@wdio/devtools-service": "^7.16.12",
+        "@wdio/local-runner": "^7.16.12",
         "@wdio/mocha-framework": "^7.16.4",
-        "@wdio/spec-reporter": "^7.16.4",
+        "@wdio/spec-reporter": "^7.16.11",
         "allure-commandline": "^2.17.2",
         "deepmerge": "^4.2.2",
         "dotenv": "^10.0.0",
